[package]
name = "dora-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "4"
kyber-rs = { path = "../kyber-rs" }
anyhow = "1.0.68"
thiserror = "1.0.38"
log = "0.4.17"
pretty_env_logger = "0.4.0"
colored = "2.0.0"
enum-display = "0.1.3"
hex = "0.4.3"
