[package]
name = "dora-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
kyber-rs = { path = "../kyber-rs" }
anyhow = "1.0.68"
thiserror = "1.0.38"
log = "0.4.17"
pretty_env_logger = "0.4.0"
colored = "2.0.0"
enum-display = "0.1.3"
hex = "0.4.3"
clap = { version = "4.0.32", features = ["derive"] }
serde = "1.0.152"
serde_json = "1.0.91"
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "production", features = [
    "mqtt",
] }
identity_iota = { version = "0.6" }
time = { version = "0.3.5", features = [
    "std",
    "serde",
    "parsing",
    "formatting",
], default-features = false }
tokio = { version = "1.24.1" }
futures = "0.3.25"
